name:            fp
version:         0.0.1
license:         BSD3
license-file:    LICENSE
author:          Kwang Yul Seo <kwangyul.seo@gmail.com>
maintainer:      Kwang Yul Seo <kwangyul.seo@gmail.com>
synopsis:        Functional Programming interpreter
description:     This package provides an interpreter for John Backus' Functional Programming.
category:        Language
stability:       Experimental
cabal-version:   >= 1.8
build-type:      Simple
homepage:        https://github.com/kseo/fp

library
  hs-source-dirs:    src
  exposed-modules:   FP.AST
                     FP.Env
                     FP.Function
                     FP.Interpreter
                     FP.Parser
                     FP.Value
  ghc-options:       -O2 -Wall
  build-depends:     base
                   , containers >= 0.5.0.0
                   , mtl >= 2.1.2
                   , parsec >= 3.1.3

executable fp
  hs-source-dirs:    src/main
  ghc-options:       -O2 -Wall
  ghc-prof-options:  -fprof-auto
  main-is:           Main.hs
  build-depends:     base
                   , fp
                   , mtl >= 2.1.2

source-repository head
  type: git
  location: https://github.com/kseo/fp.git
